[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
  (
    .venv
  )
'''

verbose = true

[tool.poetry]
name = "pytorch-neural-style-transfer"
version = "0.1.0"
description = ""
authors = ["humanscape-covy <covy@humanscape.io>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
torchvision = "^0.11.1"
pytorch-lightning = "^1.5.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
